--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="container">
         <div id="inner-container">
-
             <div class="left">
                 <img src="Plane.jpg" alt="Plane view" class="background-image">
+                <img src="aeroplane.png" alt="Logo" height="50" width="50" class="logo">
                 <div class="overlay">
                     <h1>Altitude Air</h1>
                     <hr></hr>
